# execution-delegation-framework

./: .env.example  .gitignore  .solhint.json  Dockerfile  Justfile  Makefile  README.md  ape-config.yaml  foundry.toml  package.json  pyproject.toml  slither.config.json
.github/workflows/: tests.yml
artifacts/hoodi/: deploy-hoodi.json  transactions.json
contracts/: DelegationContract.sol
contracts/interfaces/: IDelegationContract.sol
docs/: architecture.md  development.md  usage.md
script/: DeployBase.s.sol  DeployHoodi.s.sol  DeployLocalDevnet.s.sol  DeployMainnet.s.sol
script/utils/: Json.sol
scripts/: deploy_factory.py
services/: factory_deployer_service.py
src/: DelegationContract.sol  DelegationFactory.sol
src/interfaces/: IDelegationContract.sol  IDelegationFactory.sol
test/helpers/: Utilities.sol
test/helpers/mocks/: CallableMock.sol  ERC1271WalletMock.sol  ReentrantMock.sol
test/unit/: DelegationContract.t.sol  DelegationContractInvariant.t.sol  DelegationFactory.t.sol
tests/: conftest.py  test_delegation_contract.py  test_delegation_factory.py
typings/ape/: __init__.pyi
