[project]
name = "delegation-execution-authority"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "eth-ape>=0.8.47",
    "ape-solidity>=0.8.5",
    "ape-foundry>=0.8.11",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pyright>=1.1.408",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["services", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
stubPath = "typings"

